# advent

./: .gitignore  README.md
2019/: Gemfile  (+1 more)
2020/: extract_problem_statements.py  get_input.py  pyproject.toml
2020/days/1/: day1_1.py  day2_2.py  part2.md
2020/days/10/: day10_1.py  day10_2.py  part2.md
2020/days/11/: day11_1.py  day11_2.py
2020/days/12/: day12_1.py  day12_2.py
2020/days/13/: day13_1.py  day13_2.py
2020/days/2/: day2_1.py  day2_2.py  part1.md  part2.md
2020/days/3/: day3_1.py  day3_2.py  part2.md
2020/days/4/: day_4_1.py  day_4_2.py  part2.md
2020/days/5/: day_5_1.py  day_5_2.py  part2.md
2020/days/6/: day_6_1.py  day_6_2.py  part2.md
2020/days/7/: day_7_1.py  day_7_2.py  part2.md
2020/days/8/: day_8_1.py  day_8_2.py  part2.md
2020/days/9/: day9_1.py  day9_2.py  part2.md
2021/: .gitignore  get_input.py  pyproject.toml
2021/days/1/: d1_p1.py  d1_p2.py  part1.md  part2.md
2021/days/10/: d10.py
2021/days/11/: d11.py
2021/days/12/: d12.py
2021/days/13/: d13.py
2021/days/14/: d14.py
2021/days/15/: d15.py
2021/days/16/: d15.py  d16.py
2021/days/17/: d17.py
2021/days/18/: d18.py
2021/days/19/: d19.py
2021/days/2/: d2_p1.py
2021/days/3/: d3.py
2021/days/4/: d4.py
2021/days/5/: d5.py
2021/days/6/: d6.py
2021/days/7/: d7.py
2021/days/8/: d8.py
2021/days/9/: d9.py
2022/: get_input.py  pyproject.toml
2022/days/1/: d1.py
2022/days/10/: d10.py
2022/days/2/: d2.py
2022/days/3/: d3.py
2022/days/4/: d4.py
2022/days/5/: d5.py
2022/days/6/: d6.py
2022/days/7/: d7.py
2022/days/8/: d8.py
(+59 files in other folders)
