[tool.poetry]
name = "advent-2020"
version = "0.1.0"
description = ""
authors = ["petevdp <pjvanderpol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
html2markdown = "^0.1.7"
pypandoc = "^1.5"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
