[tool.poetry]
name = "advent-2021"
version = "0.1.0"
description = ""
authors = ["Pieter Vanderpol <pjvanderpol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^7.30.0"
pandas = "^1.3.4"
python-dotenv = "^0.19.2"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
pypandoc = "^1.6.4"
html2markdown = "^0.1.7"
typing-extensions = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
